Add recipe links to index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>recipes</h1>
+    <p></p>
+    <ul>
+        <li><a href="recipes/sazerac.html">sazerac</a></li>
+        <li><a href="recipes/corpse-reviver.html">corpse reviver</a></li>
+        <li><a href="recipes/pancakes">pancakes</a></li>
+    </ul>
 </body>
 </html>
