Comment-hide image links

--- a/recipes/corpse-reviver.html
+++ b/recipes/corpse-reviver.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>corpse reviver number two</title>
+    <title>corpse reviver</title>
 </head>
 <body>
-    <h1>corpse reviver number two</h1>
-    <img src="../images/corpse-reviver.jpg">
-    <h3>elusive, complex, and perfect</h3>
+    <h3>corpse reviver</h3>
+    <!-- <img src="../images/corpse-reviver.jpg"> -->
+    <h3><i>elusive, complex, and perfect</i></h3>
     <p></p>
     <h3>ingredients</h3>
     <ul>
