--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,9 +7,9 @@
     <title>pancakes</title>
 </head>
 <body>
-    <h1>pancakes</h1>
-    <img src="../images/pancakes.jpg">
-    <h3>light and fluffy buttermilk pancakes</h3>
+    <h3>pancakes</h3>
+    <!-- <img src="../images/pancakes.jpg"> -->
+    <h3><i>light and fluffy buttermilk pancakes</i></h3>
     <p></p>
     <h3>ingredients</h3>
     <ul>
