--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -7,9 +7,9 @@
     <title>sazerac</title>
 </head>
 <body>
-    <h1>sazerac</h1>
-    <img src="../images/sazerac.jpg">
-    <h3>a timeless nola classic made from rye, absinthe, and peychaud's bitters</h3>
+    <h3>sazerac</h3>
+    <!-- <img src="../images/sazerac.jpg"> -->
+    <h3><i>a timeless nola classic</i></h3>
     <p></p>
     <h3>ingredients</h3>
     <ul>
