Modify recipe pages

--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -4,34 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sazerac</title>
+    <title>pernod sazerac</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h3>sazerac</h3>
-    <!-- <img src="../images/sazerac.jpg"> -->
-    <h3><i>a timeless nola classic</i></h3>
-    <p></p>
-    <h3>ingredients</h3>
-    <ul>
-        <li>one teaspoon sugar</li>
-        <li>three or four dashes peychaud's</li>
-        <li>a few drops water</li>
-        <li>two ounces rye whiskey</li>
-        <li>one teaspoon absinthe or pernod</li>
-        <li>lemon peel</li>
-    </ul>
-    <p></p>
-    <h3>steps</h3>
-    <ol>
-        <li>chill and old fashioned glass in your freezer</li>
-        <li>in a mixing glass, combine sugar, peychaud's, and few drops water.
+    <h1 class="title">pernod sazerac</h1>
+    <img class="drinkdrawing" src="../images/sazerac.png">
+    <h1 class="text"><i>classic saz, made with pernod</i></h1>
+    <div class="linespace"></div>
+    <div class="text recipe">
+    <div class="ingredients">
+        <p>one teaspoon sugar</p>
+        <p>three or four dashes peychaud's</p>
+        <p>a few drops water</p>
+        <p>two ounces rye whiskey</p>
+        <p>one teaspoon pernod</p>
+        <p>lemon peel</p>
+    </div>
+    <div class="linespace"></div>
+        <p>chill and old fashioned glass in your freezer</p>
+        <p>in a mixing glass, combine sugar, peychaud's, and few drops water.
             mix until sugar is dissolved, and add rye.
             add plenty of ice, and stir for thirty seconds.
-        </li>
-        <li>pour absinthe into your chilled glass, rotate glass until inside is well coated;
+        </p>
+        <p>pour absinthe into your chilled glass, rotate glass until inside is well coated;
             discard the excess. strain the liquid from your mixing glass into serving glass.
             twist a piece of lemon peel over the drink.
-        </li>
-    </ol>
+        </p>
+    </div>
 </body>
 </html>
