--- a/recipes/corpse-reviver.html
+++ b/recipes/corpse-reviver.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>corpse reviver</title>
+    <title>blood of the corpse</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h3>corpse reviver</h3>
-    <!-- <img src="../images/corpse-reviver.jpg"> -->
-    <h3><i>elusive, complex, and perfect</i></h3>
-    <p></p>
-    <h3>ingredients</h3>
-    <ul>
-        <li>one ounce gin</li>
-        <li>one ounce lillet</li>
-        <li>one ounce fresh lemon juice</li>
-        <li>one ounce cointreau</li>
-        <li>one drop absinthe</li>
-    </ul>
-    <p></p>
-    <h3>steps</h3>
-    <ol>
-        <li>add all ingredients to a cocktail shaker; fill with ice and shake well. 
-            strain into a chilled cocktail glass. garnish with a cherry.</li>
-    </ol>
+    <h1 class="title">blood of the corpse</h1>
+    <img class="drinkdrawing" src="../images/bloodofcorpse.png">
+    <h1 class="text"><i>red vermouth variant on the corpse reviver</i></h1>
+    <div class="linespace"></div>
+    <div class="text recipe">
+        <div class="ingredients">                     
+        <p>one ounce gin</p>
+        <p>one ounce sweet vermouth</p>
+        <p>one ounce fresh lemon juice</p>
+        <p>one ounce cointreau</p>
+        <p>one drop pernod</p>
+        <p>one maraschino cherry</p>
+        </div>
+    <div class="linespace"></div>
+        <p>add all ingredients to a cocktail shaker; fill with ice and shake well. strain into a chilled cocktail glass. garnish with a cherry.</p>
+    </div>
 </body>
 </html>
