--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h3>recipes</h3>
-    <p></p>
-    <ul>
-        <li><a href="recipes/sazerac.html">sazerac</a></li>
-        <li><a href="recipes/corpse-reviver.html">corpse reviver</a></li>
-    </ul>
+    <img src="images/girldrink.gif"> 
+    <h1 class="title"><i>what can i get for u babe?</i></h1>
+    <div class="linespace"></div>
+    <div class="text">
+    <p><a href="recipes/sazerac.html">pernod sazerac</a></p>
+    <p><a href="recipes/corpse-reviver.html">blood of the corpse</a></p>
+    </div>
 </body>
 </html>
