Fix sazerac.html typo

--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -22,7 +22,7 @@
         <p>lemon peel</p>
     </div>
     <div class="linespace"></div>
-        <p>chill and old fashioned glass in your freezer</p>
+        <p>chill an old fashioned glass in your freezer</p>
         <p>in a mixing glass, combine sugar, peychaud's, and few drops water.
             mix until sugar is dissolved, and add rye.
             add plenty of ice, and stir for thirty seconds.
