Modify font color and link style

--- a/recipes/corpse-reviver.html
+++ b/recipes/corpse-reviver.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1 class="title">blood of the corpse</h1>
+    <h1 class="text"><b>★ blood of the corpse ★</b></h1>
     <img class="drinkdrawing" src="../images/bloodofcorpse.png">
     <h1 class="text"><i>red vermouth variant on the corpse reviver</i></h1>
     <div class="linespace"></div>
@@ -22,7 +22,7 @@
         <p>one maraschino cherry</p>
         </div>
     <div class="linespace"></div>
-        <p>add all ingredients to a cocktail shaker; fill with ice and shake well. strain into a chilled cocktail glass. garnish with a cherry.</p>
+        <p>♥ add all ingredients to a cocktail shaker; fill with ice and shake well. strain into a chilled cocktail glass. garnish with a cherry.</p>
     </div>
 </body>
 </html>
