--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1 class="title">pernod sazerac</h1>
+    <h1 class="text"><b>★ pernod sazerac ★</b></h1>
     <img class="drinkdrawing" src="../images/sazerac.png">
-    <h1 class="text"><i>classic saz, made with pernod</i></h1>
+    <h1 class="text"><i>classic saz made with pernod</i></h1>
     <div class="linespace"></div>
     <div class="text recipe">
     <div class="ingredients">
@@ -22,12 +22,12 @@
         <p>lemon peel</p>
     </div>
     <div class="linespace"></div>
-        <p>chill an old fashioned glass in your freezer</p>
-        <p>in a mixing glass, combine sugar, peychaud's, and few drops water.
+        <p>♥ chill an old fashioned glass in your freezer</p>
+        <p>♥ in a mixing glass, combine sugar, peychaud's, and few drops water.
             mix until sugar is dissolved, and add rye.
             add plenty of ice, and stir for thirty seconds.
         </p>
-        <p>pour absinthe into your chilled glass, rotate glass until inside is well coated;
+        <p>♥ pour absinthe into your chilled glass, rotate glass until inside is well coated;
             discard the excess. strain the liquid from your mixing glass into serving glass.
             twist a piece of lemon peel over the drink.
         </p>
