Fix sazerac.html typo

--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -27,7 +27,7 @@
             mix until sugar is dissolved, and add rye.
             add plenty of ice, and stir for thirty seconds.
         </p>
-        <p>♥ pour absinthe into your chilled glass, rotate glass until inside is well coated;
+        <p>♥ pour pernod into your chilled glass, rotate glass until inside is well coated;
             discard the excess. strain the liquid from your mixing glass into serving glass.
             twist a piece of lemon peel over the drink.
         </p>
